t2-4 done, added headers and paragraphs

--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,14 @@
         <meta charset="utf-8"/>
     </head>
     <body>
+      <h1>Welcome to BurgerOnline!</h1>
+      <h2>Select Burgers!</h2>
+      <p>Select your meal!</p>
+      <h2>Customer Information</h2>
+      <p>Fill in your information below please. </p>
+      <h2>Delivery Information</h2>
+      <p>Where do you want your burgers delivered?</p>
+
      <!-- Det här är en kommentar -->
     </body>
 </html>
