--- a/views/index.html
+++ b/views/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Order your burgers!</title>
-        <meta charset="utf-8"/>
-    </head>
-    <body>
+  <head>
+    <title>Order your burgers!</title>
+    <meta charset="utf-8"/>
+  </head>
+  <body>
+    <main>
       <h1>Welcome to BurgerOnline!</h1>
-      <h2>Select Burgers!</h2>
-      <p>Select your meal!</p>
-      <h2>Customer Information</h2>
-      <p>Fill in your information below please. </p>
-      <h2>Delivery Information</h2>
-      <p>Where do you want your burgers delivered?</p>
-
-     <!-- Det här är en kommentar -->
-    </body>
+      <section>
+        <h2>Select Burgers!</h2>
+        <p>Select your meal!</p>
+      </section>
+      <section>
+        <h2>Customer Information</h2>
+        <p>Fill in your information below please. </p>
+        <h2>Delivery Information</h2>
+        <p>Where do you want your burgers delivered?</p>
+      </section>
+      <!-- Det här är en kommentar -->
+    </main>
+    <footer>
+  </body>
 </html>
