added the first burger

--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,8 @@
       <section>
         <h2>Select Burgers!</h2>
         <p>Select your meal!</p>
+        <h3>Halloumi Crush</h3>
+        <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="200">
       </section>
       <section>
         <h2>Customer Information</h2>
@@ -20,5 +22,8 @@
       <!-- Det här är en kommentar -->
     </main>
     <footer>
+      <hr/>
+      <p> &copy; Frickinn Burger inc </p>
+    </footer>
   </body>
 </html>
