Added two more burgers in a table

--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,61 @@
     <meta charset="utf-8"/>
   </head>
   <body>
+
     <main>
+
       <h1>Welcome to BurgerOnline!</h1>
       <section>
         <h2>Select Burgers!</h2>
-        <p>Select your meal!</p>
-        <h3>Halloumi Crush</h3>
-        <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="200">
+        <p>Select your meal down below!</p>
+        <table>
+          <!--TABLE HEAD!-->
+          <thead>
+            <tr>
+              <th align="left">Halloumi Crush</th>
+
+              <th align="left">Plant burger deluxe</th>
+
+              <th align="left">Beef trouble</th>
+            </tr>
+          </thead>
+          <!-- TABLE BODY!-->
+          <tbody>
+            <!-- HALLOUMI BURGER INFO-->
+            <td>
+              <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150" align ="middle">
+              <ul>
+                <li>Vegetarian halloumi burger</li>
+                <li>contains lactose and gluten</li>
+                <li>987 kcal</li>
+              </ul>
+            </td>
+
+            <!-- PLANT BURGER INFO-->
+            <td>
+              <img src="https://www.max.se/contentassets/10aac66bde484d38bbf6e8b37c0e6e36/product_bbq-sandwich2.jpg" alt="Plant burger" width="150" align="middle">
+              <ul>
+                <li>Soy burger</li>
+                <li>Glutenfree</li>
+                <li>679 kcal</li>
+              </ul>
+            </td>
+
+            <!--BEEF BURGER INFO-->
+            <td>
+              <img src="https://www.max.se/globalassets/promo-blocks/max-orginal-hamburgare-frilagd.jpg?width=400&height=400&bgcolor=white" alt="delicious beef burger" height="110"  align="middle">
+
+              <ul>
+                <li>Animal based burger</li>
+                <li>Contains gluten</li>
+                <li>1050 kcal</li>
+              </ul>
+            </td>
+          </tbody>
+        </table>
       </section>
+
+
       <section>
         <h2>Customer Information</h2>
         <p>Fill in your information below please. </p>
@@ -21,9 +68,11 @@
       </section>
       <!-- Det här är en kommentar -->
     </main>
+
     <footer>
       <hr/>
       <p> &copy; Frickinn Burger inc </p>
     </footer>
+
   </body>
 </html>
