added payment methods

--- a/views/index.html
+++ b/views/index.html
@@ -84,6 +84,16 @@
             <label for="HouseNumber">House number</label><br>
             <input id="HouseNumber" type="tel"  placeholder="House number"required="required"/>
           </p>
+          <p>
+            <label for="Payment">Payment method</label><br>
+            <select id="Payment">
+              <option>Nordea</option>
+              <option selected="selected">Klarna</option>
+              <option>Swedbank</option>
+              <option>AnsarsBank</option>
+            </select>
+          </p>
+
         </form>
       </section>
       <!-- Det här är en kommentar -->
