added submit button

--- a/views/index.html
+++ b/views/index.html
@@ -93,9 +93,18 @@
               <option>AnsarsBank</option>
             </select>
           </p>
+          <p>
+            <label for="gender">Male</label><br>
+            <input id="gender" type="radio" name="gender"/> <br>
+            <label for="gender">Female</label><br>
+            <input id="gender" type="radio" name="gender"/><br>
+            <label for="gender">Other</label><br>
+            <input id="gender" type="radio" name="gender"/>
+          </p>
 
         </form>
       </section>
+      <button type="submit"><img src="https://www.emojimeaning.com/img/img-apple-160/1f4ec.png" width="15">Place my order!</button>
       <!-- Det här är en kommentar -->
     </main>
 
