added style sheet

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Order your burgers!</title>
     <meta charset="utf-8"/>
   </head>
@@ -110,7 +111,7 @@
 
     <footer>
       <hr/>
-      <p> &copy; Frickinn Burger inc </p>
+      <p> &copy; 2020 Frickinn Burger inc </p>
     </footer>
 
   </body>
