first font added to body

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
+@import 'https://fonts.googleapis.com/css?family=Pacifico|Dosis';
+
 body {
-    font-family: arial;
+    font-family: Verdana;
 
 }
