--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Pacifico|Dosis';
-
 body {
     font-family: Verdana;
+    font-size: 0.5cm;
+
 
 }
