Added bold text and classes in html

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <main>
 
       <h1>Welcome to BurgerOnline!</h1>
-      <section>
+      <section >
         <h2>Select Burgers!</h2>
         <p>Select your meal down below!</p>
         <table>
@@ -30,8 +30,8 @@
             <td>
               <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150" align="middle">
               <ul>
-                <li>Vegetarian halloumi burger</li>
-                <li>contains lactose and gluten</li>
+                <li> Vegetarian </li>
+                <li class="alergies">contains <span class="alergies">lactose and gluten</span></li>
                 <li>987 kcal</li>
               </ul>
             </td>
@@ -41,7 +41,7 @@
               <img src="https://www.max.se/contentassets/359fcb7f236247a7a4a41cdf2ddf36b0/product_delifresh-signature-plant-beef.jpg" alt="Plant burger" width="150" align="middle">
               <ul>
                 <li>Soy burger</li>
-                <li>Glutenfree</li>
+                <li><span class="alergies">Glutenfree</span></li>
                 <li>679 kcal</li>
               </ul>
             </td>
@@ -52,7 +52,7 @@
 
               <ul>
                 <li>Animal based burger</li>
-                <li>Contains gluten</li>
+                <li>Contains <span class="alergies">gluten</span></li>
                 <li>1050 kcal</li>
               </ul>
             </td>
