--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,15 @@ body {
 
 }
 .alergies {
-    color: /*#ff5500*/ rgb(255,0,0);
+    color: /*#ff5500*/ rgb(125,0,0);
     font-weight: bold;
+}
+
+#Burgerinfo {
+    background-color: rgb(0,0,0);
+    text-emphasis-color: rgb(255,255,255);
+    color: rgb(255,255,255);
+}
+#Delinfo {
+
 }
