--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <main>
 
       <h1>Welcome to BurgerOnline!</h1>
-      <section >
+      <section id="Burgerinfo">
         <h2>Select Burgers!</h2>
         <p>Select your meal down below!</p>
         <table>
@@ -31,7 +31,7 @@
               <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150" align="middle">
               <ul>
                 <li> Vegetarian </li>
-                <li class="alergies">contains <span class="alergies">lactose and gluten</span></li>
+                <li>contains <span class="alergies">lactose and gluten</span></li>
                 <li>987 kcal</li>
               </ul>
             </td>
@@ -40,8 +40,8 @@
             <td>
               <img src="https://www.max.se/contentassets/359fcb7f236247a7a4a41cdf2ddf36b0/product_delifresh-signature-plant-beef.jpg" alt="Plant burger" width="150" align="middle">
               <ul>
+                <li>Vegan</li>
                 <li>Soy burger</li>
-                <li><span class="alergies">Glutenfree</span></li>
                 <li>679 kcal</li>
               </ul>
             </td>
@@ -61,7 +61,7 @@
       </section>
 
       <!--FORM - DELIVERY INFORMATION-->
-      <section id="contact information">
+      <section id="Delinfo">
         <h2>Customer Information</h2>
         <p>Fill in your information below please. </p>
 
