--- a/views/index.html
+++ b/views/index.html
@@ -13,32 +13,32 @@
       <section id="Burgerinfo">
         <h2>Select Burgers!</h2>
         <p>Select your meal down below!</p>
-        <table>
+        <table class="center">
           <!--TABLE HEAD!-->
           <thead>
             <tr>
-              <th align="middle">Halloumi Crush</th>
+              <th align="left">Halloumi Crush</th>
 
-              <th align="middle">Plant burger deluxe</th>
+              <th align="left">Plant burger </th>
 
-              <th align="middle">Beef trouble</th>
+              <th align="left">Beef trouble</th>
             </tr>
           </thead>
           <!-- TABLE BODY!-->
           <tbody>
             <!-- HALLOUMI BURGER INFO-->
             <td>
-              <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150" align="middle">
+              <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150" >
               <ul>
                 <li> Vegetarian </li>
-                <li>contains <span class="alergies">lactose and gluten</span></li>
+                <li>contains <span class="alergies">lactose</span></li>
                 <li>987 kcal</li>
               </ul>
             </td>
 
             <!-- PLANT BURGER INFO-->
             <td>
-              <img src="https://www.max.se/contentassets/359fcb7f236247a7a4a41cdf2ddf36b0/product_delifresh-signature-plant-beef.jpg" alt="Plant burger" width="150" align="middle">
+              <img src="https://www.max.se/contentassets/359fcb7f236247a7a4a41cdf2ddf36b0/product_delifresh-signature-plant-beef.jpg" alt="Plant burger" width="150" >
               <ul>
                 <li>Vegan</li>
                 <li>Soy burger</li>
@@ -48,7 +48,7 @@
 
             <!--BEEF BURGER INFO-->
             <td>
-              <img src="https://www.max.se/contentassets/96a590c660f54c8b83bc5080b036fecf/product_gdl-umami-bacon-burger2.jpg" alt="delicious beef burger" width="150"  align="middle">
+              <img src="https://www.max.se/contentassets/96a590c660f54c8b83bc5080b036fecf/product_gdl-umami-bacon-burger2.jpg" alt="delicious beef burger" width="150"  >
 
               <ul>
                 <li>Animal based burger</li>
