--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@
 body {
     font-family: Verdana;
     font-size: 0.5cm;
+    margin: 0 auto;
+
 
 
 }
@@ -22,4 +24,8 @@ body {
 button:hover {
     color: rgb(0,0,250);
 
+}
+table.center {
+    margin: 0 auto;
+    width:120% ;
 }
