--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,14 +16,18 @@ body {
     background-color: rgb(0,0,0);
     text-emphasis-color: rgb(255,255,255);
     color: rgb(255,255,255);
+    margin-top:5%;
 }
 #Delinfo {
-
+    margin-top: 5%;
 }
 
 button:hover {
     color: rgb(0,0,250);
 
+}
+button{
+    margin-top: 2%;
 }
 table.center {
     margin: 0 auto;
