--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,9 +17,13 @@ body {
     text-emphasis-color: rgb(255,255,255);
     color: rgb(255,255,255);
     margin-top:5%;
+    border: 10px dashed rgb(100,150,200);
+    padding-left: 10px;
 }
 #Delinfo {
     margin-top: 5%;
+    border: 10px dashed rgb(100,150,200);
+    padding-left: 15px;
 }
 
 button:hover {
@@ -28,6 +32,9 @@ button:hover {
 }
 button{
     margin-top: 2%;
+}
+h2{
+    color:rgb(100,150,200);
 }
 table.center {
     margin: 0 auto;
