--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
       <h1>Welcome to BurgerOnline!</h1>
       <section id="Burgerinfo">
-        <h2>Select Burgers!</h2>
+        <h2 id="h2">Select Burgers!</h2>
         <p>Select your meal down below!</p>
         <table class="center">
           <!--TABLE HEAD!-->
