--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,13 @@ body {
 
 
 }
+#head{
+    margin-top:  5%;
+    border: 5px dashed rgb(100,150,200);
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 1%;
+}
 .alergies {
     color: /*#ff5500*/ rgb(125,0,0);
     font-weight: bold;
@@ -17,13 +24,19 @@ body {
     text-emphasis-color: rgb(255,255,255);
     color: rgb(255,255,255);
     margin-top:5%;
-    border: 10px dashed rgb(100,150,200);
-    padding-left: 10px;
+    border: 5px dashed rgb(100,150,200);
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 1%;
+
 }
 #Delinfo {
     margin-top: 5%;
-    border: 10px dashed rgb(100,150,200);
-    padding-left: 15px;
+    border: 5px dashed rgb(100,150,200);
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 1%;
+
 }
 
 button:hover {
@@ -33,10 +46,14 @@ button:hover {
 button{
     margin-top: 2%;
 }
+
 h2{
     color:rgb(100,150,200);
 }
 table.center {
     margin: 0 auto;
     width:120% ;
+}
+header img{
+    opacity: 0.7;
 }
