--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <main>
       <header id="head">
       <h1>Welcome to BurgerOnline!</h1>
-      <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/36869917_2317488458263012_268201835548901376_n.jpg?_nc_cat=109&_nc_oc=AQmc1wGXuXE73J00DNWvA1uLzTyzidTWUmhTpftLfoQYun6wI2dqMEYTv0DVFv47Euc&_nc_ht=scontent-arn2-1.xx&oh=9bb8323e89f426f9c49904d6f65a0b4a&oe=5ECAE25E" alt="Restaurant">
+      <img src="https://www.mediconvillage.se/sites/default/files/styles/page_top_xx_large_/public/images/page/2017-01/5606.jpg?itok=-K2609lR" alt="Restaurant">
       </header>
       <section id="Burgerinfo">
         <h2 id="h2">Select Burgers!</h2>
