--- a/views/index.html
+++ b/views/index.html
@@ -10,57 +10,46 @@
 
     <main>
       <header id="head">
-      <h1>Welcome to BurgerOnline!</h1>
-      <img src="https://www.mediconvillage.se/sites/default/files/styles/page_top_xx_large_/public/images/page/2017-01/5606.jpg?itok=-K2609lR" alt="Restaurant">
+        <h1>Welcome to BurgerOnline!</h1>
+        <img src="https://www.mediconvillage.se/sites/default/files/styles/page_top_xx_large_/public/images/page/2017-01/5606.jpg?itok=-K2609lR" alt="Restaurant">
       </header>
       <section id="Burgerinfo">
         <h2 id="h2">Select Burgers!</h2>
         <p>Select your meal down below!</p>
-        <table class="center">
-          <!--TABLE HEAD!-->
-          <thead>
-            <tr>
-              <th align="left">Halloumi Crush</th>
 
-              <th align="left">Plant burger </th>
 
-              <th align="left">Beef trouble</th>
-            </tr>
-          </thead>
-          <!-- TABLE BODY!-->
-          <tbody>
-            <!-- HALLOUMI BURGER INFO-->
-            <td>
-              <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150" >
-              <ul>
-                <li> Vegetarian </li>
-                <li>contains <span class="alergies">lactose</span></li>
-                <li>987 kcal</li>
-              </ul>
-            </td>
+        <div class="wrapper">
+          <div class="a">
+            <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150">
+            <ul>
+              <li> Vegetarian </li>
+              <li>contains <span class="alergies">lactose</span></li>
+              <li>987 kcal</li>
+            </ul>
 
+
+          </div>
+          <div class="b">
+            <img src="https://www.max.se/contentassets/359fcb7f236247a7a4a41cdf2ddf36b0/product_delifresh-signature-plant-beef.jpg" alt="Plant burger" width="150" >
             <!-- PLANT BURGER INFO-->
-            <td>
-              <img src="https://www.max.se/contentassets/359fcb7f236247a7a4a41cdf2ddf36b0/product_delifresh-signature-plant-beef.jpg" alt="Plant burger" width="150" >
-              <ul>
-                <li>Vegan</li>
-                <li>Soy burger</li>
-                <li>679 kcal</li>
-              </ul>
-            </td>
-
+            <ul>
+              <li>Vegan</li>
+              <li>Soy burger</li>
+              <li>679 kcal</li>
+            </ul>
+          </div>
+          <div class="c">
+            <img src="https://www.max.se/contentassets/96a590c660f54c8b83bc5080b036fecf/product_gdl-umami-bacon-burger2.jpg" alt="delicious beef burger" width="150"  >
             <!--BEEF BURGER INFO-->
-            <td>
-              <img src="https://www.max.se/contentassets/96a590c660f54c8b83bc5080b036fecf/product_gdl-umami-bacon-burger2.jpg" alt="delicious beef burger" width="150"  >
+            <ul>
+              <li>Animal based burger</li>
+              <li>Contains <span class="alergies">gluten</span></li>
+              <li>1050 kcal</li>
+            </ul>
+          </div>
 
-              <ul>
-                <li>Animal based burger</li>
-                <li>Contains <span class="alergies">gluten</span></li>
-                <li>1050 kcal</li>
-              </ul>
-            </td>
-          </tbody>
-        </table>
+        </div>
+
       </section>
 
       <!--FORM - DELIVERY INFORMATION-->
