--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,3 +63,33 @@ table.center {
     margin: 0 auto;
     width:120% ;
 }
+.wrapper{
+    display: grid;
+    grid-gap: 100px;
+    grid-template-columns: 100px 100px 100px ;
+    background-color: rgb(0,0,0);
+    color: #444;
+}
+
+.box {
+    background-color: #444;
+    color: rgb(255,255,255);
+    border-radius: 10px;
+    padding: 20px;
+    font-size: 150%;
+
+}
+
+.a {
+    grid-column: 1 ;
+    grid-row: 1;
+}
+.b {
+    grid-column: 2 ;
+    grid-row:1;
+}
+
+.c {
+    grid-column: 3 ;
+    grid-row:1;
+}
