done with html and css

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <main>
       <header id="head">
         <h1>Welcome to BurgerOnline!</h1>
-        <img src="https://www.mediconvillage.se/sites/default/files/styles/page_top_xx_large_/public/images/page/2017-01/5606.jpg?itok=-K2609lR" alt="Restaurant">
+        <img id="fig1"src="https://www.salzburgerhof.com/fileadmin/templates/img/slider/restaurant-jagdstube/018_Jagdstube_02-1.jpg" alt="Restaurant">
       </header>
       <section id="Burgerinfo">
         <h2 id="h2">Select Burgers!</h2>
@@ -62,7 +62,7 @@
         <form>
           <p>
             <label for="Fullname">Fullname </label> <br>
-            <input id="Fullname"  type="text"placeholder="First and last name" required="required"/>
+            <input id="Fullname"  type="text" placeholder="First and last name" required="required"/>
           </p>
           <p>
             <label for="email">E-mail</label><br>
