--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,35 @@
 @import 'https://fonts.googleapis.com/css?family=Pacifico|Dosis';
+
 body {
     font-family: Verdana;
     font-size: 0.5cm;
     margin: 0 auto;
 }
 header h1 {
-    position: absolute em;
+    position: absolute ;
+    color:rgb(0,0,0);
+    font-weight: solid;
+    left: 35em;
+    top: 9em;
     padding-bottom: 1em;
 }
-header img{
+#fig1{
     opacity: 0.5;
     width: 100%;
-    height:auto;
+    height: 100%;
 }
 
 
 #head{
     margin-top:  5%;
-    border: 5px dashed rgb(100,150,200);
+    border: 5px dashed rgb(220,220,220);
     margin-left: 1%;
     margin-right: 1%;
-    padding-left: 1%;
     overflow:hidden;
     height: 10em;
 }
 .alergies {
-    color: /*#ff5500*/ rgb(125,0,0);
+    color: /*#ff5500*/ rgb(255,0,0);
     font-weight: bold;
 }
 
@@ -34,7 +38,7 @@ header img{
     text-emphasis-color: rgb(255,255,255);
     color: rgb(255,255,255);
     margin-top:3%;
-    border: 5px dashed rgb(100,150,200);
+    border: 5px dashed rgb(220,220,220);
     margin-left: 1%;
     margin-right: 1%;
     padding-left: 1%;
@@ -42,7 +46,7 @@ header img{
 }
 #Delinfo {
     margin-top: 1%;
-    border: 5px dashed rgb(100,150,200);
+    border: 5px dashed rgb(220,220,200);
     margin-left: 1%;
     margin-right: 1%;
     padding-left: 1%;
@@ -52,20 +56,22 @@ header img{
 button:hover {
     color: rgb(0,0,250);
 }
+
 button{
     margin-top: 2%;
 }
 
 h2{
-    color:rgb(100,150,200);
+    color:rgb(220,220,220);
 }
+
 table.center {
     margin: 0 auto;
     width:120% ;
 }
 .wrapper{
     display: grid;
-    grid-gap: 100px;
+    grid-gap: 90px;
     grid-template-columns: 100px 100px 100px ;
     background-color: rgb(0,0,0);
     color: #444;
@@ -92,4 +98,8 @@ table.center {
 .c {
     grid-column: 3 ;
     grid-row:1;
+}
+section p {
+
+    margin-bottom: 30px;
 }
