--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="js/js_script.js"></script>
-    <script src="js/vue_script.js"></script>
-    <script src="https://vuejs.org/js/vue.js"></script>
+    <script src="https://vuejs.org/js/vue.js" ></script>
+    <script src="js/js_script.js" defer></script>
+    <script src="js/vue_script.js" defer></script>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Order your burgers!</title>
@@ -20,42 +20,12 @@
       <section id="Burgerinfo">
         <h2 id="h2">Select Burgers!</h2>
         <p>Select your meal down below!</p>
-
-
-        <div class="wrapper">
-          <div class="a">
-            <h2>Halloumi Burger!</h2>
-            <img src="https://www.max.se/contentassets/00848003f52b4c8d8dcf139ecdb3fc1e/product_gdl-umami-halloumi2.jpg" alt = "Delicious halloumi burger" width="150">
-            <ul>
-              <li> Vegetarian </li>
-              <li>contains <span class="alergies">lactose</span></li>
-              <li>987 kcal</li>
-            </ul>
-
-
-          </div>
-          <div class="b">
-            <h2>Planty Burger!</h2>
-            <img src="https://www.max.se/contentassets/359fcb7f236247a7a4a41cdf2ddf36b0/product_delifresh-signature-plant-beef.jpg" alt="Plant burger" width="150" >
-            <!-- PLANT BURGER INFO-->
-            <ul>
-              <li>Vegan</li>
-              <li>Soy burger</li>
-              <li>679 kcal</li>
-            </ul>
-          </div>
-          <div class="c">
-            <h2>Meaty Burger!</h2>
-            <img src="https://www.max.se/contentassets/96a590c660f54c8b83bc5080b036fecf/product_gdl-umami-bacon-burger2.jpg" alt="delicious beef burger" width="150"  >
-            <!--BEEF BURGER INFO-->
-            <ul>
-
-              <li>Animal based burger</li>
-              <li>Contains <span class="alergies">gluten</span></li>
-              <li>1050 kcal</li>
-            </ul>
-          </div>
-
+        <div id="grid">
+          <div v-bind:style="{gridColumn:1}" > <img v-bind:src=v1.img alt="halloumi">{{v1.info()}}</div>
+          <div v-bind:style="{gridColumn:2}" v-bind:style="{width:10%}"> <img v-bind:src=v2.img alt="plant">{{v2.info()}}</div>
+          <div v-bind:style="{gridColumn:3}"> <img v-bind:src=v3.img alt="meat">{{v3.info()}}</div>
+          <div v-bind:style="{gridcolumn: 4}"> <img v-bind:src=v4.img alt="Nasty">{{v4.info()}}</div>
+          <div v-bind:style="{'gridColumn': '5'}"> <img v-bind:src=v5.img alt="candy">{{v5.info()}}</div>
         </div>
 
       </section>
@@ -105,7 +75,7 @@
 
         </form>
       </section>
-      <button type="submit"><img src="https://www.emojimeaning.com/img/img-apple-160/1f4ec.png" width="15">Place my order!</button>
+      <button type="submit"><img src="https://www.emojimeaning.com/img/img-apple-160/1f4ec.png" width="15">Place my order!</buttonx>
       <!-- Det här är en kommentar -->
     </main>
 
