--- a/views/index.html
+++ b/views/index.html
@@ -22,10 +22,10 @@
         <p>Select your meal down below!</p>
         <div id="grid">
           <div v-bind:style="{gridColumn:1}" > <img v-bind:src=v1.img alt="halloumi">{{v1.info()}}</div>
-          <div v-bind:style="{gridColumn:2}" v-bind:style="{width:10%}"> <img v-bind:src=v2.img alt="plant">{{v2.info()}}</div>
+          <div v-bind:style="{gridColumn:2}" v-bind:style="{width:10%}"> <img v-bind:src=v2.img alt="plant" >{{v2.info()}}</div>
           <div v-bind:style="{gridColumn:3}"> <img v-bind:src=v3.img alt="meat">{{v3.info()}}</div>
-          <div v-bind:style="{gridcolumn: 4}"> <img v-bind:src=v4.img alt="Nasty">{{v4.info()}}</div>
-          <div v-bind:style="{'gridColumn': '5'}"> <img v-bind:src=v5.img alt="candy">{{v5.info()}}</div>
+          <div v-bind:style="{gridcolumn: 4}"> <img v-bind:src=v4.img alt="Nasty" id="img4">{{v4.info()}}</div>
+          <div v-bind:style="{'gridColumn': '5'}"> <img v-bind:src=v5.img alt="candy" id="img5">{{v5.info()}}</div>
         </div>
 
       </section>
