--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,3 +116,13 @@ section p {
 #img5{
     width:4em;
 }
+#bimg{
+
+    width:15%;
+
+}
+#button{
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 1%;
+}
