--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/deli-very.css">
+    <script src="/vue/vue.js" defer></script>
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="js/deli-very.js" defer></script>
     <script src="https://vuejs.org/js/vue.js" ></script>
     <script type="text/javascript" src="js/menu.js"></script>
     <script src="js/js_script.js" defer></script>
@@ -54,7 +58,7 @@
             {{v5.name}}
 
           </div>
-           <label for="candy"></label>
+          <label for="candy"></label>
 
 
         </div>
@@ -101,15 +105,6 @@
             <input v-model="email" id="email"  type="email" placeholder="E-mail adress" required="required"/>
           </p>
           <p>
-            <label for="Street">Street</label><br>
-            <input v-model="Street" id="Street" type="text" placeholder="Street" required="required"/>
-          </p>
-
-          <p>
-            <label for="HouseNumber">House number</label><br>
-            <input v-model.number="HouseNumber"id="HouseNumber" type="tel"  placeholder="House number"required="required"/>
-          </p>
-          <p>
             <label for="Payment">Payment method</label><br>
             <select v-model="selected" id="Payment">
               <option>Paypal</option>
@@ -130,11 +125,22 @@
             <input id="result" type="text" required="required"/>
           </p>
 
+          <h1> Click in the map! </h1>
+          <a href="/dispatcher" target="_blank">Open dispatcher in new window</a>.
+          <p>
+            <div class="view-box">
+              <div id="dots" v-on:click="addOrder">
+                <div
+                  v-for="(order, key) in orders"
+                  v-bind:style="{ left: order.details.x + 'px', top: order.details.y + 'px'}">
+                  {{key}}
+                </div>
+              </div>
+            </div>
+          </p>
         </form>
-
-
-
       </section>
+
       <div id="last">
         <button id="button" v-on:click="addInfo" type="submit"><img src="https://www.emojimeaning.com/img/img-apple-160/1f4ec.png" width="10" id="bimg">Place my order!</button>
         <ul>
